feat: ClawHub skill detail modal with GitHub file tree, stats, and external links
- Add ClawHubDetailModal with full skill info (hero, stats, author, tags, changelog, dates)
- Add GitHub file tree with collapsible folders (main/master branch fallback)
- Add View on GitHub / View on ClawHub buttons using tauri-plugin-opener
- Add get_github_tree_cmd Rust backend (GitHub Tree API)
- Add github_url, stats, tags to ClawHubSkillDetail struct
- Add opener:default permission to Tauri capabilities
- Fix all external links to use openUrl (SkillDetailModal + ClawHubDetailModal)
- Make search results clickable to open detail modal
- Prevent modal backdrop click from closing modals
- Add SkillCard click to open SkillDetailModal
- Add i18n keys (en/zh) for all new UI elements
- Enlarge detail modal (880px) with optimized layout

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "version:sync": "node scripts/version.mjs sync",
     "version:check": "node scripts/version.mjs check",
     "tauri": "tauri",
-    "tauri:dev": "tauri dev",
+    "tauri:dev": "tauri dev --config src-tauri/tauri.conf.dev.json",
     "tauri:icon:desktop": "node scripts/tauri-icon-desktop.mjs",
     "tauri:build": "npm run version:check && tauri build",
     "tauri:build:mac:dmg": "npm run tauri:build -- --bundles dmg",
