fix: improve VM connection handling
- Add TCP connect timeout (15s) and SSH session timeout (30s)
- Fix stderr read order in ssh_exec (read before wait_close)
- Improve sftp_mkdir_p error propagation instead of silent .ok()
- Cache default_tool_adapters() outside loop in sync_all_skills_to_remote
- Change sync_all_skills_to_remote to partial-success mode
- Add port range validation (1-65535) in add/update_remote_host
- Fix frontend tool detection race condition (Set instead of single ID)
- Fix vertical centering for span.settings-input in remote hosts row

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,6 +39,7 @@ uuid = { version = "1", features = ["v4"] }
 urlencoding = "2.1"
 zip = { version = "2", default-features = false, features = ["deflate"] }
 tempfile = "3"
+ssh2 = { version = "0.9", features = ["vendored-openssl"] }
 
 [dev-dependencies]
 mockito = "1"
